@@ -18,6 +18,10 @@
 #define DEBUG_CHECK    0x00000100
 #define DEBUG_ULTRA    0xFFFFFFFF
 
+#ifdef ASSERT
+#undef ASSERT
+#endif
+
 #ifdef DBG
 
 extern DWORD DebugTraceLevel;
@@ -28,10 +32,6 @@ extern DWORD DebugTraceLevel;
         DbgPrint("(%hS:%d)(%hS) ", __FILE__, __LINE__, __FUNCTION__); \
 		DbgPrint _x_; \
     }
-
-#ifdef ASSERT
-#undef ASSERT
-#endif
 
 #ifdef NASSERT
 #define ASSERT(x)
